name:                tutblog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iravid/tutblog
license:             BSD3
license-file:        LICENSE
author:              Itamar Ravid
maintainer:          iravid@iravid.com
copyright:           2017 Itamar Ravid
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tutblog
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text,
                       pandoc,
                       pandoc-types,
                       optparse-applicative,
                       directory,
                       filepath,
                       typed-process,
                       split,
                       bytestring,
                       regex-tdfa,
                       containers,
                       temporary